syntax = "proto3";

package auth;

option go_package = "github.com/software-architecture-proj/nova-backend-auth-service/services/genproto/auth";

service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc LoginUser(LoginRequest) returns (LoginResponse) {}
}

// User Creation
message CreateUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string birthdate = 6; // Format: "YYYY-MM-DD"
    string phone = 7;
    string code_id = 8; // id from country_code
}

message CreateUserResponse {
    string user_id = 1;
    bool success = 2;
    string message = 3;
    string email = 4;
    string username = 5;
    string first_name = 6;
    string last_name = 7;
}

// Authentication
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    string user_id = 3;
    string email = 4;
    string username = 5;
}